# mdl-cli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: usage.md
mdl/: __init__.py  app.py  cli.py  config_store.py  playlist.py  resolve.py  runner.py
mdl/builders/: audio.py  common.py  info.py  video.py  yt_dlp_audio.py  yt_dlp_common.py  yt_dlp_info.py  yt_dlp_video.py
mdl/commands/: __init__.py  audio.py  info.py  settings.py  smoke.py  video.py
mdl/core/: __init__.py  config.py  config_store.py  options.py  resolve.py
mdl/infra/: __init__.py  runner.py
mdl/services/: __init__.py  download_service.py
