[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "mdl-cli"
dynamic = ["version"]
description = "A human-friendly wrapper over yt-dlp."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

authors = [
  { name = "Tomás Ezequiel Aguirre" }
]

keywords = ["yt-dlp", "downloader", "cli", "audio", "video"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/tomieaguirre/mdl-cli"

[project.scripts]
mdl = "mdl.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mdl*"]

[tool.setuptools_scm]
tag_regex = "^v(?P<version>\\d+\\.\\d+\\.\\d+)$"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
